--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
     "ejs": "2.5.6",
-    "express": "4.15.2"
+    "express": "4.15.2",
+    "request": "^2.81.0"
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,8 @@
     "heroku",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "nodemon": "^1.11.0"
+  }
 }
